# python-stabilizer

./: .gitignore  404.html  CHANGELOG.md  README.md  REPO_STRUCTURE.md  index.html  mkdocs.yml  pushfiles.bat  pyproject.toml  sitemap.xml  x-gate-proof.md
.github/workflows/: ci.yml
api-reference/: index.html
architecture/: index.html
architecture/extension-points/: index.html
docs/: api-reference.md  architecture.md  getting-started.md  hybrid-simulation.md  index.md  qiskit-interop.md  references.md
getting-started/: index.html
hybrid-simulation/: index.html
qiskit-interop/: index.html
references/: Gottesman-Knill Theorem Part 1.md  Gottesman-Knill Theorem Part 2.md  Gottesman-Knill Theorem-part 1.ipynb  Gottesman-knill Theorem Part-2.ipynb  index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
stabilizer_python/: __init__.py  ancilla.py  benchmark.py  circuit.py  codes.py  decomposition.py  encoded_state.py  gate.py  linear_algebra.py  magic.py  noise.py  qiskit_interop.py  simulator.py  stabilizer_code.py  statevector.py  syndrome.py  tableau.py  tracing.py
tests/: conftest.py  test-from-docs.py  test_additional_clifford_gates.py  test_ancilla.py  test_benchmark.py  test_bitflip3.py  test_decomposition.py  test_encoded_state.py  test_gaussian_elimination.py  test_inspect.py  test_inspection.py  test_magic.py  test_noise.py  test_nonclifford_gates.py  test_qiskit_circuits.py  test_random_circuits.py  test_sanity_checks.py  test_simulator_trace.py  test_stabilizer_code.py  test_traced_circuit.py  test_two_qubit_bell.py
(+61 files in other folders)
