[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stabilizer-python"
version = "0.1.0"
description = "Minimal stabilizer (Clifford) simulator in pure Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "qiskit",
]

[tool.pytest.ini_options]
addopts = "-s"

[tool.setuptools.packages.find]
include = ["stabilizer_python*"]
